--- a/serverless.yml
+++ b/serverless.yml
@@ -1,6 +1,9 @@
 
 service: cadastro-pacientes
 
+plugins:
+  - serverless-offline
+
 provider:
   name: aws
   runtime: nodejs12.x
@@ -13,6 +16,12 @@ functions:
   listarPacientes:
     handler: handler.listarPacientes
     events:
-    - http
-      path: pacientes
-      methods: get
+      - http:
+          path: pacientes
+          method: get
+  obterPaciente:
+    handler: handler.obterPaciente
+    events:
+      - http:
+          path: pacientes/{pacienteId}
+          method: get
