--- a/serverless.yml
+++ b/serverless.yml
@@ -12,6 +12,17 @@ provider:
   stage: dev
   region: us-east-1
 
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:PutItem
+        - dynamodb:DeleteItem
+        - dynamodb:GetItem
+      Resource: arn:aws:dynamodb:us-east-1:237387733543:table/PACIENTES
+
+
 functions:
   listarPacientes:
     handler: handler.listarPacientes
